tests/fixtures/valid/multi/instantiated_import_graph_ref/src/rocket/main.gcl
// main.gcl -- binding uses @ref from importer's scope
dim Velocity = Length / Time;

param my_mass: Mass = 800.0 kg;

include rocket.lib(dry_mass: @my_mass).{ delta_v };

node result: Velocity = @delta_v;
